# research

./: README.md
thread-pool/: CMakeLists.txt  thread-context.h  thread-pool.h  version.h
thread-pool/src/: version.h.in
thread-pool/src/common/: message-queue.h  queue-factory.cpp  queue-factory.h
thread-pool/src/threads/: message-reader.cpp  message-reader.h
